fixxed alignment issues

--- a/open_doors/client/src/App.css
+++ b/open_doors/client/src/App.css
@@ -125,7 +125,6 @@ button span {
   color: #507A22;
   font-family: 'Quicksand';
   height: 40px;
-  padding-top: 7px;
   font-size: 20px;
   text-align: center;
   border: none;
@@ -165,7 +164,7 @@ button span {
   width: 100%;
   height: 234px;
   left: 0px;
-  top: 65px;
+  top: 83px;
   background: #DD9500;
   z-index: 1;
 }
@@ -175,7 +174,7 @@ button span {
   width: 90px;
   height: 47px;
   left: 875px;
-  top: 415Px;
+  top: 450Px;
   z-index: 3;
   background-color: #DD9500;
   color: #FFFFFF;
@@ -295,6 +294,17 @@ button[disabled]{
   height: 450px;
   left: 780px;
   top: 136px;
+}
+
+#about-us{
+  color: black;
+  font-size: 20px;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 85%;
+  text-align: center;
+  top: 650px;
 }
 
 #fillerSpace{
